feat: Director fitch implemented